Fix Paragraph Spacing

--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@ article {
   padding-bottom: 1rem;
 }
 
+article p {
+  margin-bottom: 1rem;
+}
+
+article p:last-of-type {
+  margin: 0;
+}
+
 dl {
   margin-bottom: 1.5rem;
 }
